--- a/SimTECH/SimTECH/Pages/Setup/Engines.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Engines.razor
@@ -10,7 +10,12 @@
         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
             <MudText Typo="Typo.h3">Engines</MudText>
             <MudSpacer />
-            <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" OnClick="AddEngine">New</MudButton>
+            <MudButtonGroup Variant="Variant.Outlined" Color="Color.Tertiary">
+                <MudButton OnClick="ToggleDisplayArchived">
+                    @(showingArchived ? "Active" : "Archive")
+                </MudButton>
+                <MudButton OnClick="AddEngine">New</MudButton>
+            </MudButtonGroup>
         </MudStack>
     </MudPaper>
     <MudDataGrid T="Engine" Items="@EngineData" Dense="true">
@@ -40,6 +45,8 @@
 @code {
     private List<Engine> EngineData { get; set; } = new();
 
+    private bool showingArchived = false;
+
     protected override async Task OnInitializedAsync()
     {
         _bread.SetBreadcrumbs(new List<BreadcrumbItem>()
@@ -68,7 +75,17 @@
 
     async Task DeleteEngine(Engine engine)
     {
-        await EngineService.DeleteEngine(engine);
+        await EngineService.ArchiveEngine(engine);
         EngineData.Remove(engine);
+    }
+
+    async Task ToggleDisplayArchived()
+    {
+        if (showingArchived)
+            EngineData = await EngineService.GetEngines();
+        else
+            EngineData = await EngineService.GetEngines(StateFilter.Archived);
+
+        showingArchived = !showingArchived;
     }
 }
