Summary, it exists now!

--- a/SimTECH/SimTECH/Components/CountrySelect.razor
+++ b/SimTECH/SimTECH/Components/CountrySelect.razor
@@ -15,10 +15,8 @@
 </MudSelectExtended>
 
 @code {
-    [Parameter]
-    public string Class { get; set; } = string.Empty;
-    [Parameter]
-    public Country[] Countries { get; set; } = Enum.GetValues<Country>();
+    [Parameter] public string Class { get; set; } = string.Empty;
+    [Parameter] public Country[] Countries { get; set; } = Enum.GetValues<Country>();
 
     public Country HandleSelection
     {
