--- a/SimTECH/SimTECH/Components/RangeInput.razor
+++ b/SimTECH/SimTECH/Components/RangeInput.razor
@@ -4,7 +4,7 @@
         <ToolBarContent>
             <MudText Typo="Typo.h6">@_displayTitle</MudText>
             <MudSpacer />
-            <MudIconButton Icon="@Icons.Material.Filled.Add" Color="Color.Tertiary" OnClick="AppendRow" />
+            <MudIconButton Icon="@Icons.Material.Filled.Add" Color="Color.Tertiary" Size="Size.Small" OnClick="AppendRow" />
         </ToolBarContent>
         <HeaderContent>
             <MudTh>Less than</MudTh>
@@ -24,6 +24,7 @@
             <MudTd>
                 <MudIconButton Icon="@Icons.Material.Outlined.Delete"
                                Color="Color.Error"
+                               Size="Size.Small"
                                OnClick="@(() => RemoveRow(context))"/>
             </MudTd>
         </RowTemplate>
