--- a/SimTECH/SimTECH/Pages/Racing/Practice.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Practice.razor
@@ -127,7 +127,7 @@
         {
             new BreadcrumbItem("Home", href: ""),
             new BreadcrumbItem("Seasons", href: "seasons"),
-            new BreadcrumbItem("Overview", href: "", disabled: true),
+            new BreadcrumbItem("Overview", href: $"overview/{Model.SeasonId}"),
             new BreadcrumbItem("Raceweek", href: $"raceweek/{RaceId}"),
             new BreadcrumbItem("Practice", href: $"practice/{RaceId}/{PracticeNum}", disabled: true),
         });
