--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -65,6 +65,12 @@ th {
     font-size: 4em;
 }
 
+.crumb-test {
+    border: 2px solid grey;
+    border-bottom-color: red;
+    border-right-color: red;
+}
+
 .tyre {
     display: inline-block;
     width: 30px;
