--- a/SimTECH/SimTECH/Pages/Racing/Qualy/Qualifying.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Qualy/Qualifying.razor
@@ -25,23 +25,20 @@
 
     public QualifyingModel Model { get; set; }
 
-    // Two ways to do this: three different racedriver lists for each session
-    // Alternatively make a custom class which has an identifier for which session the values are (ARE WHAT?)
-
     private bool loading = true;
 
     protected override async Task OnInitializedAsync()
     {
+        Model = await _raceService.RetrieveQualifyingModel(RaceId);
+
         _bread.SetBreadcrumbs(new List<BreadcrumbItem>()
         {
             new BreadcrumbItem("Home", href: ""),
             new BreadcrumbItem("Seasons", href: "seasons"),
-            new BreadcrumbItem("Overview", href: "", disabled: true),
+            new BreadcrumbItem("Overview", href: $"overview/{Model.SeasonId}"),
             new BreadcrumbItem("Raceweek", href: $"raceweek/{RaceId}"),
             new BreadcrumbItem("Qualifying", href: $"qualifying/{RaceId}", disabled: true),
         });
-
-        Model = await _raceService.RetrieveQualifyingModel(RaceId);
 
         loading = false;
     }
