--- a/SimTECH/SimTECH/Pages/Setup/Tracks.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Tracks.razor
@@ -28,7 +28,7 @@
             </TemplateColumn>
             <TemplateColumn T="Track" Title="Length" SortBy="e => e.Length">
                 <CellTemplate>
-                    <MudText Typo="Typo.caption">@(context.Item.Length)Km</MudText>
+                    <MudText Typo="Typo.caption">@(context.Item.Length)km</MudText>
                 </CellTemplate>
             </TemplateColumn>
             <TemplateColumn T="Track" Sortable="false">
